[gd_scene load_steps=14 format=2]

[ext_resource path="res://enemigos/KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://enemigos/enemigo_basico/e_004.png" type="Texture" id=2]
[ext_resource path="res://enemigos/enemigo_basico/e_005.png" type="Texture" id=3]
[ext_resource path="res://enemigos/enemigo_basico/e_00.png" type="Texture" id=4]
[ext_resource path="res://enemigos/enemigo_basico/e_001png.png" type="Texture" id=5]
[ext_resource path="res://enemigos/enemigo_basico/e_002png.png" type="Texture" id=6]
[ext_resource path="res://enemigos/enemigo_basico/e_003png.png" type="Texture" id=7]
[ext_resource path="res://sonidos_y_musica/sonidos/spisar_enemigo.mp3" type="AudioStream" id=8]
[ext_resource path="res://enemigos/enemigo_basico/e_deadth_01.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "movimiento",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 9 ) ],
"loop": true,
"name": "moricion",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 5.0

[sub_resource type="CircleShape2D" id=4]
radius = 5.00899

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5.625, 0.25 )

[node name="enemigo_simple" type="Node2D"]
__meta__ = {
"_edit_group_": true
}

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="golpe" type="AudioStreamPlayer" parent="KinematicBody2D"]
stream = ExtResource( 8 )

[node name="deteccion_derecha" type="RayCast2D" parent="KinematicBody2D"]
position = Vector2( 0, -5 )
enabled = true
cast_to = Vector2( 10, 0 )

[node name="deteccion_izquqierda" type="RayCast2D" parent="KinematicBody2D"]
position = Vector2( 0, -5 )
enabled = true
cast_to = Vector2( -10, 0 )

[node name="deteccion_suelo" type="RayCast2D" parent="KinematicBody2D"]
position = Vector2( -14, 0 )
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 2

[node name="deteccion_suelo2" type="RayCast2D" parent="KinematicBody2D"]
position = Vector2( 16, 0 )
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
frames = SubResource( 1 )
animation = "movimiento"
frame = 3
playing = true

[node name="cuerpo" type="CollisionShape2D" parent="KinematicBody2D"]
light_mask = 0
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="KinematicBody2D/cuerpo"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/cuerpo/Area2D"]
scale = Vector2( 1.4, 1 )
shape = SubResource( 4 )

[node name="hitboxArea" type="Area2D" parent="KinematicBody2D"]
position = Vector2( 0, -5.5 )

[node name="hitbox" type="CollisionShape2D" parent="KinematicBody2D/hitboxArea"]
position = Vector2( 0, -0.5 )
shape = SubResource( 3 )

[node name="catch" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0, -5 )
shape = SubResource( 3 )

[connection signal="animation_finished" from="KinematicBody2D/AnimatedSprite" to="KinematicBody2D" method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="KinematicBody2D/cuerpo/Area2D" to="KinematicBody2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="KinematicBody2D/cuerpo/Area2D" to="KinematicBody2D" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="KinematicBody2D/hitboxArea" to="KinematicBody2D" method="_on_hitboxArea_body_entered"]
